--- a/newapp/src/App.css
+++ b/newapp/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700");
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i");
 
 * {
@@ -8,18 +8,18 @@
 }
 
 :root {
-  --font-roboto: "Roboto Slab", serif;
+  --font-roboto: "Montserrat", serif;
   --font-raleway: "Raleway", sans-serif;
 }
 
 body {
   font-family: var(--font-roboto);
-  background-color: #212426;
+  background-color: rgb(23, 25, 27);
+  min-height: 100vh;
 }
 
 .app {
   padding: 4rem;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -30,21 +30,27 @@ h1 {
   font-size: 3rem;
   letter-spacing: 0.9px;
   background: linear-gradient(90deg,
-      rgb(236, 48, 48) 60%,
-      rgba(255, 10, 10, 0.637) 100%);
+      rgba(236, 48, 48, 0.8) 0%,
+      rgb(236, 48, 48) 80%,
+      rgba(255, 10, 10, 0.65) 100%);
+
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   width: fit-content;
 }
 
+h2 {
+  color: #df3529;
+}
+
 .search {
-  width: 71%;
+  width: clamp(20rem, 60vw, 50rem);
   margin: 4rem 0 2rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 1.5rem 1.75rem;
+  padding: 1.4rem 1.75rem;
   border-radius: 3rem;
   background: #1f2123;
   -webkit-box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
@@ -58,7 +64,6 @@ h1 {
   font-family: var(--font-raleway);
   font-weight: 500;
   padding-right: 1rem;
-
   outline: none;
   color: #a1a1a1;
   background: #1f2123;
@@ -88,7 +93,6 @@ h1 {
 .container {
   width: 100%;
   margin-top: 3rem;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -99,12 +103,10 @@ h1 {
   width: 310px;
   height: 460px;
   margin: 1.5rem;
-
   position: relative;
   border-radius: 12px;
   overflow: hidden;
   border: none;
-
   transition: all 0.4s cubic-bezier(0.175, 0.885, 0, 1);
   box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1);
 }
@@ -115,11 +117,11 @@ h1 {
   width: 100%;
   opacity: 0;
   top: 0;
-  color: #f9d3b4;
+  color: #c01c1c;
 }
 
 .movie:hover {
-  box-shadow: 0px 30px 18px -8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 30px 18px -8px rgba(10, 10, 10, 0.315);
   transform: scale(1.05, 1.05);
 }
 
@@ -135,9 +137,8 @@ h1 {
 
 .movie div:nth-of-type(3) {
   z-index: 2;
-  background-color: #343739;
-  padding: 16px 24px 24px 24px;
-
+  background: linear-gradient(transparent,#111111 90%);
+  padding: 36px 24px 24px 24px;
   position: absolute;
   bottom: 0;
   right: 0;
@@ -155,8 +156,9 @@ h1 {
 
 .movie div:nth-of-type(3) h3 {
   margin-top: 5px;
-  font-family: "Roboto Slab", serif;
-  color: #f9d3b4;
+  font-family: "Montserrat", serif;
+  color: #eb4343;
+  text-shadow: 0 0 5px rgba(34, 33, 33, 0.87);
 }
 
 .movie:hover div:nth-of-type(2) {
@@ -179,7 +181,6 @@ h1 {
 
   .search {
     padding: 1rem 1.75rem;
-    width: 100%;
   }
 
   .search input {
